--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 streamlit
-torch
-torchvision
-ultralytics
+ultralytics>=8.0.0
+torch==2.0.1+cpu
+torchvision==0.15.2+cpu
 Pillow
 PyMuPDF
-ultralytics
+opencv-python
+opencv-python-headless
 fitz
 pdf2image
