--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit
-ultralytics>=8.0.0
-torch==2.0.1+cpu
-torchvision==0.15.2+cpu
+ultralytics
+torch
+torchvision
 Pillow
 PyMuPDF
 opencv-python
